-starting Image upload -spring config refactoring -small UI changes